[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Kyle Harris <kaharrs2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
ncurses = "5.99.0"
num = "0.3"
regex = "1"
rayon = "1.5"
aoc-runner = ""
aoc-runner-derive = ""
